Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
         </ul>
       </header>
       <section>
-        <p><strong>Origin</strong></p>
+        <h2>
+<a name="osx" class="anchor" href="#osx"><span class="octicon octicon-link"></span></a>OSX</h2>
+
+<p><code>brew install freeimage</code><br><code>brew install gd</code><br><code>brew install graphicsmagick</code><br></p>
+
+<p><code>npm install</code></p>
+
+<p><strong>Origin</strong></p>
 
 <blockquote>
 <p>RoboHash, the source code for the site RoboHash.org
